base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: sourcegraph-frontend
 annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/subnets: "subnet-d36ee5b6, subnet-ccf63995, subnet-8e5af3f9"
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
   alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
   alb.ingress.kubernetes.io/healthcheck-path: /healthz
   alb.ingress.kubernetes.io/load-balancer-name: sourcegraph-alb
   alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:425555124585:certificate/613f3538-59d6-49bb-93c2-b3740085ace7
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
   alb.ingress.kubernetes.io/tags: Environment=dev,Team=sourcegraph-poc
   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
   alb.ingress.kubernetes.io/ssl-redirect: '443'
  #  alb.ingress.kubernetes.io/success-codes: 200,301,302 
spec:
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
          name: ssl-redirect
          port:
            name: use-annotation
     - path: /
       pathType: Prefix
       backend:
         service:
           name: sourcegraph-frontend
           port:
             number: 30080
