base/frontend/sourcegraph-frontend.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # We can upload large files (extensions)
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    # external-dns.alpha.kubernetes.io/hostname: sourcegraph-poc.rdc-dev.moveaws.com
    # external-dns.alpha.kubernetes.io/target: a8a6ca2bb08154af3afd4a8856cc667d-2760d2045792fc6f.elb.us-west-2.amazonaws.com
    # See
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    # for more nginx annotations.
  labels:
    app: sourcegraph-frontend
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
    app.kubernetes.io/component: frontend
  name: sourcegraph-frontend
spec:
  # See the customization guide (../../../docs/configure.md) for information
  # about configuring TLS
  # tls:
  # - hosts:
  #   - sourcegraph.example.com
  #   secretName: sourcegraph-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sourcegraph-frontend
            port: 
              number: 30080
    # If you're using TLS/SSL, uncomment the following line and replace 'sourcegraph.example.com' with the real
    # domain that you want to use for your Sourcegraph instance.
    host: sourcegraph-poc.rdc-dev.moveaws.com
